add artifact to POM and fix tests